--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.4",
     "@types/react-dom": "^16.9.8",
+    "@types/sockjs-client": "^1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-scripts": "3.4.1",
+    "sockjs-client": "^1.4.0",
     "typescript": "^3.9.3"
   },
   "scripts": {
