--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^25.2.3",
     "@types/node": "^14.0.4",
     "@types/react-dom": "^16.9.8",
     "@types/sockjs-client": "^1.1.1",
+    "@types/uuid": "^8.0.0",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-scripts": "3.4.1",
     "sockjs-client": "^1.4.0",
-    "typescript": "^3.9.3"
+    "types": "^0.1.1",
+    "typescript": "^3.9.3",
+    "uuid": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
