--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
     "react-scripts": "3.4.1",
+    "redux-thunk": "^2.3.0",
     "sockjs-client": "^1.4.0",
     "types": "^0.1.1",
     "typescript": "^3.9.3",
