--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/axios": "^0.14.0",
     "@types/jest": "^25.2.3",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^14.0.4",
     "@types/react-dom": "^16.9.8",
     "@types/sockjs-client": "^1.1.1",
     "@types/uuid": "^8.0.0",
     "axios": "^0.19.2",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.3",
